--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ python:
 
 install:
   - sudo apt-get update
-  - sudo apt-get install gdal-bin
+  - sudo apt-get install gdal-bin python-gdal
 
 script:
   - ogrinfo wmo-ra.geojson
-#  - python validate.py wmo-ra.geojson
+  - python validate.py wmo-ra.geojson
