--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 install:
   - sudo apt-get update
-  - sudo apt-get install gdal-bin python-gdal
+  - sudo apt-get install -y gdal-bin python-gdal
 
 script:
   - ogrinfo wmo-ra.geojson
