--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: c
 
 install:
   - sudo apt-get update
-  - sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
+  - sudo apt-get install python-software-properties
+  - sudo add-apt-repository ppa:ubuntugis/ppa
   - sudo apt-get update
   - sudo apt-get install -y gdal-bin python-gdal
 
